crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E303_E303_first_line_docstring.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E303 [*] Too many blank lines (3)
 --> E303_first_line_docstring.py:5:1
  |
5 | def fn():
  | ^^^
6 |     pass
help: Remove extraneous blank line(s)
  |
3 |
  -
4 | def fn():
  |
